TRAV-240-fix(request dropdowns): fix distorted dropdown items (#1005)
- ensure dropdown items are evenly spaced with growing populated list

[Fixes TRAV-240]

--- a/src/components/Forms/FormsAPI/Input/_input.scss
+++ b/src/components/Forms/FormsAPI/Input/_input.scss
@@ -184,7 +184,6 @@ form .form-input {
         padding-left: 15px;
         outline: none;
         width: 100%;
-        height: 100%;
       }
     }
   }
